# api-statistic-counter

./: .pre-commit-config.yaml  README.md  docker-compose.dev.yml  example.env
backend/: alembic.ini  main.py  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 2023-03-29_14-29_statistic_table.py  2023-03-29_15-03_statistic_table.py
backend/src/: service.py
backend/src/api/dependencies/db/: __init__.py
backend/src/api/endpoints/: routers.py
backend/src/api/endpoints/statistic/: statistic.py
backend/src/config/: settings.py
backend/src/db/: base.py  session.py
backend/src/domain/common/: entity.py  orm_utils.py
backend/src/domain/common/interfaces/: async_db_repository_interface.py  async_db_service_interface.py
backend/src/domain/common/repositories/: sqlalchemy_repository.py
backend/src/domain/common/services/: sqlalchemy_service.py
backend/src/domain/statistic/: __init__.py  dto.py  entity.py  interfaces.py  repository.py  service.py
backend/src/models/: statistic.py
